--- a/style.css
+++ b/style.css
@@ -46,68 +46,6 @@ p{
     -webkit-user-select: none;
     -moz-user-select: none; */
 }
-/* Start of custom-btn */
-.custom-btn{
-    border: none;
-    position: relative;
-    border-radius: 10px;
-    cursor: pointer;
-    background: #182848;
-    padding: 2em 4em;
-    font-family: "Paytone One", sans-serif;
-}
-.btn{
-    text-decoration: none;
-    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
-    background: linear-gradient(-45deg, #ff00c1, #00fff9);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.custom-btn::after, .custom-btn::before {
-    content: "";
-    position: absolute;
-    background: linear-gradient(
-      var(--rotate),
-      #ff00c1 0%,
-      #9600ff 25%,
-      #4900ff 50%,
-      #00b8ff 80%,
-      #00fff9 100%
-    );
-    width: 105%;
-    height: 110%;
-    left: -2.5%;
-    top: -5%;
-    z-index: -1;
-    border-radius: 10px;
-    transition: --rotate 9999s linear;
-}
-.custom-btn:hover::after, .custom-btn:hover::before{
-    --rotate: 3600deg;
-    transition: --rotate 20s linear;
-}
-.custom-btn:hover::before{
-    animation: fade 1.2s;
-}
-@property --rotate {
-    syntax: "<angle>";
-    initial-value: 130deg;
-    inherits: false;
-}
-@keyframes fade {
-    0% {
-      opacity: 1;
-      transform: scale(1);
-      filter: blur(10px);
-    }
-    100% {
-      opacity: 0;
-      transform: scale(1.4);
-      filter: blur(10px);
-    }
-}
-/* End of color custom-btn */
 h1{
     font-size: 38px;
     color: var(--txt-color);
@@ -236,7 +174,7 @@ nav-mobile a{
     text-decoration: none;
     color: var(--txt-color);
 }
-img{
+.custom_img{
     text-align:center;
     display: inline-block;
     padding: 8px;
