--- a/style.css
+++ b/style.css
@@ -303,6 +303,40 @@ footer{
     width: 100%;
     height: 60px;
 }
+/* SweeperJS */
+.swiper {
+	width: 80%;
+    background-color: var(--accent);
+}
+.image__wrapper {
+	width: 100%;
+	position: relative;
+	padding-top: 56.25%;
+}
+.image__wrapper img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center top;
+}
+.swiper-button-prev,
+.swiper-button-next{
+    color: red;
+    opacity: 0.8;
+}
+.swiper-button-prev:hover,
+.swiper-button-next:hover{
+    opacity: 1;
+    transition-duration: 0.4s;
+    transition-timing-function: ease-in-out;
+    transform: scale(1.2);
+}
+/* .swiper-pagination-bullet-active {
+    background-color: black;
+} */
 @media print {
     body {
        visibility: hidden;
