--- a/style.css
+++ b/style.css
@@ -43,17 +43,23 @@ body{
     transition-property: var(--background), var(--foreground);
 }
 h1{
+    text-align: center;
     font-size: 34px;
     color: var(--txt-color);
     letter-spacing: 2px;
+    margin: 24px 0 24px 0;
 }
 h2{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 33px;
+    padding: 33px 0 33px 0;
     flex: 1;
     flex-basis: 25%;
+    color: var(--txt-color);
+}
+h3{
+    text-align: center;
     color: var(--txt-color);
 }
 p{
@@ -63,6 +69,9 @@ p{
     -moz-user-select: none; */
     padding: 0.5rem;
     margin: 0.5rem;
+    color: var(--txt-color);
+}
+ul li{
     color: var(--txt-color);
 }
 .hidden{
@@ -113,6 +122,11 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.container_text{
+    max-width: 70%;
+    margin: 0 auto;
+    align-items: center;
 }
 .hamburger{
     display: block;
